--- a/AltaDefinizione/src/main/res/values/strings.xml
+++ b/AltaDefinizione/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <string name="header_tw">Altadefinizione</string>
+    <string name="label">Versione Sito:</string>
+    <string name="v1">🆕 Versione Nuova</string>
+    <string name="v2">🗓️ Versione Vecchia</string>
 </resources>
